--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Em busca da cidade perdida </title>
 </head>
 <body>
+     <main>
+        <div>
+            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e beleza naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi seguilas!</p>
+        <button>Rio de Janeiro</button>
+        </div>
+     </main>  
     
+
+
 </body>
 </html>
